Anal_Syntaxique.output
Terminals unused in grammar

    incompleted_pattren


State 87 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: ε
    2      | line input

    3 line: queries semicolon END
    4     | END

    5 queries: SELECT columns FROM tables
    6        | SELECT columns FROM tables WHERE condition
    7        | DELETE FROM attribute
    8        | DELETE FROM attribute WHERE condition
    9        | UPDATE attribute SET column_value_list
   10        | UPDATE attribute SET column_value_list WHERE condition
   11        | INSERT INTO attribute VALUES insert_values
   12        | INSERT INTO attribute insert_columns VALUES insert_values
   13        | CREATE TABLE attribute open_parenthesis create_list close_parenthesis
   14        | ALTER TABLE attribute alter_option

   15 columns: all_columns
   16        | attribute
   17        | attribute comma columns

   18 tables: attribute
   19       | attribute comma tables

   20 condition: condition AND condition
   21          | attribute IN open_parenthesis queries close_parenthesis
   22          | attribute IN open_parenthesis pattren_list close_parenthesis
   23          | equals_list equals_sign equals_list
   24          | attribute LIKE pattren

   25 equals_list: attribute
   26            | number
   27            | pattren
   28            | attribute dot attribute

   29 pattren_list: pattren
   30             | pattren comma pattren_list

   31 column_value_list: attribute equals_sign pattren
   32                  | attribute equals_sign pattren comma column_value_list
   33                  | attribute equals_sign number
   34                  | attribute equals_sign number comma column_value_list

   35 insert_columns: open_parenthesis insert_columns_list close_parenthesis

   36 insert_values: open_parenthesis insert_values_list close_parenthesis

   37 insert_columns_list: attribute
   38                    | attribute comma insert_columns_list

   39 insert_values_list: pattren
   40                   | number
   41                   | pattren comma insert_values_list
   42                   | number comma insert_values_list

   43 create_list: attribute DATATYPE
   44            | attribute DATATYPE comma create_list

   45 alter_option: ADD attribute DATATYPE
   46             | DROP COLUMN attribute
   47             | MODIFY COLUMN attribute DATATYPE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    END (258) 3 4
    SELECT <string> (259) 5 6
    DELETE <string> (260) 7 8
    UPDATE <string> (261) 9 10
    INSERT <string> (262) 11 12
    CREATE <string> (263) 13
    ALTER <string> (264) 14
    INTO <string> (265) 11 12
    VALUES <string> (266) 11 12
    FROM <string> (267) 5 6 7 8
    WHERE <string> (268) 6 8 10
    AND <string> (269) 20
    LIKE <string> (270) 24
    SET <string> (271) 9 10
    IN <string> (272) 21 22
    TABLE <string> (273) 13 14
    COLUMN <string> (274) 46 47
    ADD <string> (275) 45
    DROP <string> (276) 46
    MODIFY <string> (277) 47
    DATATYPE <string> (278) 43 44 45 47
    number <number> (279) 26 33 34 40 42
    pattren <string> (280) 24 27 29 30 31 32 39 41
    attribute <string> (281) 7 8 9 10 11 12 13 14 16 17 18 19 21 22 24 25 28 31 32 33 34 37 38 43 44 45 46 47
    comma <string> (282) 17 19 30 32 34 38 41 42 44
    semicolon <string> (283) 3
    dot <string> (284) 28
    equals_sign <string> (285) 23 31 32 33 34
    open_parenthesis <string> (286) 13 21 22 35 36
    close_parenthesis <string> (287) 13 21 22 35 36
    all_columns <string> (288) 15
    incompleted_pattren <string> (289)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    input (36)
        on left: 1 2
        on right: 0 2
    line (37)
        on left: 3 4
        on right: 2
    queries <string> (38)
        on left: 5 6 7 8 9 10 11 12 13 14
        on right: 3 21
    columns (39)
        on left: 15 16 17
        on right: 5 6 17
    tables (40)
        on left: 18 19
        on right: 5 6 19
    condition (41)
        on left: 20 21 22 23 24
        on right: 6 8 10 20
    equals_list (42)
        on left: 25 26 27 28
        on right: 23
    pattren_list (43)
        on left: 29 30
        on right: 22 30
    column_value_list (44)
        on left: 31 32 33 34
        on right: 9 10 32 34
    insert_columns (45)
        on left: 35
        on right: 12
    insert_values (46)
        on left: 36
        on right: 11 12
    insert_columns_list (47)
        on left: 37 38
        on right: 35 38
    insert_values_list (48)
        on left: 39 40 41 42
        on right: 36 41 42
    create_list (49)
        on left: 43 44
        on right: 13 44
    alter_option (50)
        on left: 45 46 47
        on right: 14


State 0

    0 $accept: • input $end

    END     shift, and go to state 1
    SELECT  shift, and go to state 2
    DELETE  shift, and go to state 3
    UPDATE  shift, and go to state 4
    INSERT  shift, and go to state 5
    CREATE  shift, and go to state 6
    ALTER   shift, and go to state 7

    $default  reduce using rule 1 (input)

    input    go to state 8
    line     go to state 9
    queries  go to state 10


State 1

    4 line: END •

    $default  reduce using rule 4 (line)


State 2

    5 queries: SELECT • columns FROM tables
    6        | SELECT • columns FROM tables WHERE condition

    attribute    shift, and go to state 11
    all_columns  shift, and go to state 12

    columns  go to state 13


State 3

    7 queries: DELETE • FROM attribute
    8        | DELETE • FROM attribute WHERE condition

    FROM  shift, and go to state 14


State 4

    9 queries: UPDATE • attribute SET column_value_list
   10        | UPDATE • attribute SET column_value_list WHERE condition

    attribute  shift, and go to state 15


State 5

   11 queries: INSERT • INTO attribute VALUES insert_values
   12        | INSERT • INTO attribute insert_columns VALUES insert_values

    INTO  shift, and go to state 16


State 6

   13 queries: CREATE • TABLE attribute open_parenthesis create_list close_parenthesis

    TABLE  shift, and go to state 17


State 7

   14 queries: ALTER • TABLE attribute alter_option

    TABLE  shift, and go to state 18


State 8

    0 $accept: input • $end

    $end  shift, and go to state 19


State 9

    2 input: line • input

    END     shift, and go to state 1
    SELECT  shift, and go to state 2
    DELETE  shift, and go to state 3
    UPDATE  shift, and go to state 4
    INSERT  shift, and go to state 5
    CREATE  shift, and go to state 6
    ALTER   shift, and go to state 7

    $default  reduce using rule 1 (input)

    input    go to state 20
    line     go to state 9
    queries  go to state 10


State 10

    3 line: queries • semicolon END

    semicolon  shift, and go to state 21


State 11

   16 columns: attribute •
   17        | attribute • comma columns

    comma  shift, and go to state 22

    $default  reduce using rule 16 (columns)


State 12

   15 columns: all_columns •

    $default  reduce using rule 15 (columns)


State 13

    5 queries: SELECT columns • FROM tables
    6        | SELECT columns • FROM tables WHERE condition

    FROM  shift, and go to state 23


State 14

    7 queries: DELETE FROM • attribute
    8        | DELETE FROM • attribute WHERE condition

    attribute  shift, and go to state 24


State 15

    9 queries: UPDATE attribute • SET column_value_list
   10        | UPDATE attribute • SET column_value_list WHERE condition

    SET  shift, and go to state 25


State 16

   11 queries: INSERT INTO • attribute VALUES insert_values
   12        | INSERT INTO • attribute insert_columns VALUES insert_values

    attribute  shift, and go to state 26


State 17

   13 queries: CREATE TABLE • attribute open_parenthesis create_list close_parenthesis

    attribute  shift, and go to state 27


State 18

   14 queries: ALTER TABLE • attribute alter_option

    attribute  shift, and go to state 28


State 19

    0 $accept: input $end •

    $default  accept


State 20

    2 input: line input •

    $default  reduce using rule 2 (input)


State 21

    3 line: queries semicolon • END

    END  shift, and go to state 29


State 22

   17 columns: attribute comma • columns

    attribute    shift, and go to state 11
    all_columns  shift, and go to state 12

    columns  go to state 30


State 23

    5 queries: SELECT columns FROM • tables
    6        | SELECT columns FROM • tables WHERE condition

    attribute  shift, and go to state 31

    tables  go to state 32


State 24

    7 queries: DELETE FROM attribute •
    8        | DELETE FROM attribute • WHERE condition

    WHERE  shift, and go to state 33

    $default  reduce using rule 7 (queries)


State 25

    9 queries: UPDATE attribute SET • column_value_list
   10        | UPDATE attribute SET • column_value_list WHERE condition

    attribute  shift, and go to state 34

    column_value_list  go to state 35


State 26

   11 queries: INSERT INTO attribute • VALUES insert_values
   12        | INSERT INTO attribute • insert_columns VALUES insert_values

    VALUES            shift, and go to state 36
    open_parenthesis  shift, and go to state 37

    insert_columns  go to state 38


State 27

   13 queries: CREATE TABLE attribute • open_parenthesis create_list close_parenthesis

    open_parenthesis  shift, and go to state 39


State 28

   14 queries: ALTER TABLE attribute • alter_option

    ADD     shift, and go to state 40
    DROP    shift, and go to state 41
    MODIFY  shift, and go to state 42

    alter_option  go to state 43


State 29

    3 line: queries semicolon END •

    $default  reduce using rule 3 (line)


State 30

   17 columns: attribute comma columns •

    $default  reduce using rule 17 (columns)


State 31

   18 tables: attribute •
   19       | attribute • comma tables

    comma  shift, and go to state 44

    $default  reduce using rule 18 (tables)


State 32

    5 queries: SELECT columns FROM tables •
    6        | SELECT columns FROM tables • WHERE condition

    WHERE  shift, and go to state 45

    $default  reduce using rule 5 (queries)


State 33

    8 queries: DELETE FROM attribute WHERE • condition

    number     shift, and go to state 46
    pattren    shift, and go to state 47
    attribute  shift, and go to state 48

    condition    go to state 49
    equals_list  go to state 50


State 34

   31 column_value_list: attribute • equals_sign pattren
   32                  | attribute • equals_sign pattren comma column_value_list
   33                  | attribute • equals_sign number
   34                  | attribute • equals_sign number comma column_value_list

    equals_sign  shift, and go to state 51


State 35

    9 queries: UPDATE attribute SET column_value_list •
   10        | UPDATE attribute SET column_value_list • WHERE condition

    WHERE  shift, and go to state 52

    $default  reduce using rule 9 (queries)


State 36

   11 queries: INSERT INTO attribute VALUES • insert_values

    open_parenthesis  shift, and go to state 53

    insert_values  go to state 54


State 37

   35 insert_columns: open_parenthesis • insert_columns_list close_parenthesis

    attribute  shift, and go to state 55

    insert_columns_list  go to state 56


State 38

   12 queries: INSERT INTO attribute insert_columns • VALUES insert_values

    VALUES  shift, and go to state 57


State 39

   13 queries: CREATE TABLE attribute open_parenthesis • create_list close_parenthesis

    attribute  shift, and go to state 58

    create_list  go to state 59


State 40

   45 alter_option: ADD • attribute DATATYPE

    attribute  shift, and go to state 60


State 41

   46 alter_option: DROP • COLUMN attribute

    COLUMN  shift, and go to state 61


State 42

   47 alter_option: MODIFY • COLUMN attribute DATATYPE

    COLUMN  shift, and go to state 62


State 43

   14 queries: ALTER TABLE attribute alter_option •

    $default  reduce using rule 14 (queries)


State 44

   19 tables: attribute comma • tables

    attribute  shift, and go to state 31

    tables  go to state 63


State 45

    6 queries: SELECT columns FROM tables WHERE • condition

    number     shift, and go to state 46
    pattren    shift, and go to state 47
    attribute  shift, and go to state 48

    condition    go to state 64
    equals_list  go to state 50


State 46

   26 equals_list: number •

    $default  reduce using rule 26 (equals_list)


State 47

   27 equals_list: pattren •

    $default  reduce using rule 27 (equals_list)


State 48

   21 condition: attribute • IN open_parenthesis queries close_parenthesis
   22          | attribute • IN open_parenthesis pattren_list close_parenthesis
   24          | attribute • LIKE pattren
   25 equals_list: attribute •
   28            | attribute • dot attribute

    LIKE  shift, and go to state 65
    IN    shift, and go to state 66
    dot   shift, and go to state 67

    $default  reduce using rule 25 (equals_list)


State 49

    8 queries: DELETE FROM attribute WHERE condition •
   20 condition: condition • AND condition

    AND  shift, and go to state 68

    $default  reduce using rule 8 (queries)


State 50

   23 condition: equals_list • equals_sign equals_list

    equals_sign  shift, and go to state 69


State 51

   31 column_value_list: attribute equals_sign • pattren
   32                  | attribute equals_sign • pattren comma column_value_list
   33                  | attribute equals_sign • number
   34                  | attribute equals_sign • number comma column_value_list

    number   shift, and go to state 70
    pattren  shift, and go to state 71


State 52

   10 queries: UPDATE attribute SET column_value_list WHERE • condition

    number     shift, and go to state 46
    pattren    shift, and go to state 47
    attribute  shift, and go to state 48

    condition    go to state 72
    equals_list  go to state 50


State 53

   36 insert_values: open_parenthesis • insert_values_list close_parenthesis

    number   shift, and go to state 73
    pattren  shift, and go to state 74

    insert_values_list  go to state 75


State 54

   11 queries: INSERT INTO attribute VALUES insert_values •

    $default  reduce using rule 11 (queries)


State 55

   37 insert_columns_list: attribute •
   38                    | attribute • comma insert_columns_list

    comma  shift, and go to state 76

    $default  reduce using rule 37 (insert_columns_list)


State 56

   35 insert_columns: open_parenthesis insert_columns_list • close_parenthesis

    close_parenthesis  shift, and go to state 77


State 57

   12 queries: INSERT INTO attribute insert_columns VALUES • insert_values

    open_parenthesis  shift, and go to state 53

    insert_values  go to state 78


State 58

   43 create_list: attribute • DATATYPE
   44            | attribute • DATATYPE comma create_list

    DATATYPE  shift, and go to state 79


State 59

   13 queries: CREATE TABLE attribute open_parenthesis create_list • close_parenthesis

    close_parenthesis  shift, and go to state 80


State 60

   45 alter_option: ADD attribute • DATATYPE

    DATATYPE  shift, and go to state 81


State 61

   46 alter_option: DROP COLUMN • attribute

    attribute  shift, and go to state 82


State 62

   47 alter_option: MODIFY COLUMN • attribute DATATYPE

    attribute  shift, and go to state 83


State 63

   19 tables: attribute comma tables •

    $default  reduce using rule 19 (tables)


State 64

    6 queries: SELECT columns FROM tables WHERE condition •
   20 condition: condition • AND condition

    AND  shift, and go to state 68

    $default  reduce using rule 6 (queries)


State 65

   24 condition: attribute LIKE • pattren

    pattren  shift, and go to state 84


State 66

   21 condition: attribute IN • open_parenthesis queries close_parenthesis
   22          | attribute IN • open_parenthesis pattren_list close_parenthesis

    open_parenthesis  shift, and go to state 85


State 67

   28 equals_list: attribute dot • attribute

    attribute  shift, and go to state 86


State 68

   20 condition: condition AND • condition

    number     shift, and go to state 46
    pattren    shift, and go to state 47
    attribute  shift, and go to state 48

    condition    go to state 87
    equals_list  go to state 50


State 69

   23 condition: equals_list equals_sign • equals_list

    number     shift, and go to state 46
    pattren    shift, and go to state 47
    attribute  shift, and go to state 88

    equals_list  go to state 89


State 70

   33 column_value_list: attribute equals_sign number •
   34                  | attribute equals_sign number • comma column_value_list

    comma  shift, and go to state 90

    $default  reduce using rule 33 (column_value_list)


State 71

   31 column_value_list: attribute equals_sign pattren •
   32                  | attribute equals_sign pattren • comma column_value_list

    comma  shift, and go to state 91

    $default  reduce using rule 31 (column_value_list)


State 72

   10 queries: UPDATE attribute SET column_value_list WHERE condition •
   20 condition: condition • AND condition

    AND  shift, and go to state 68

    $default  reduce using rule 10 (queries)


State 73

   40 insert_values_list: number •
   42                   | number • comma insert_values_list

    comma  shift, and go to state 92

    $default  reduce using rule 40 (insert_values_list)


State 74

   39 insert_values_list: pattren •
   41                   | pattren • comma insert_values_list

    comma  shift, and go to state 93

    $default  reduce using rule 39 (insert_values_list)


State 75

   36 insert_values: open_parenthesis insert_values_list • close_parenthesis

    close_parenthesis  shift, and go to state 94


State 76

   38 insert_columns_list: attribute comma • insert_columns_list

    attribute  shift, and go to state 55

    insert_columns_list  go to state 95


State 77

   35 insert_columns: open_parenthesis insert_columns_list close_parenthesis •

    $default  reduce using rule 35 (insert_columns)


State 78

   12 queries: INSERT INTO attribute insert_columns VALUES insert_values •

    $default  reduce using rule 12 (queries)


State 79

   43 create_list: attribute DATATYPE •
   44            | attribute DATATYPE • comma create_list

    comma  shift, and go to state 96

    $default  reduce using rule 43 (create_list)


State 80

   13 queries: CREATE TABLE attribute open_parenthesis create_list close_parenthesis •

    $default  reduce using rule 13 (queries)


State 81

   45 alter_option: ADD attribute DATATYPE •

    $default  reduce using rule 45 (alter_option)


State 82

   46 alter_option: DROP COLUMN attribute •

    $default  reduce using rule 46 (alter_option)


State 83

   47 alter_option: MODIFY COLUMN attribute • DATATYPE

    DATATYPE  shift, and go to state 97


State 84

   24 condition: attribute LIKE pattren •

    $default  reduce using rule 24 (condition)


State 85

   21 condition: attribute IN open_parenthesis • queries close_parenthesis
   22          | attribute IN open_parenthesis • pattren_list close_parenthesis

    SELECT   shift, and go to state 2
    DELETE   shift, and go to state 3
    UPDATE   shift, and go to state 4
    INSERT   shift, and go to state 5
    CREATE   shift, and go to state 6
    ALTER    shift, and go to state 7
    pattren  shift, and go to state 98

    queries       go to state 99
    pattren_list  go to state 100


State 86

   28 equals_list: attribute dot attribute •

    $default  reduce using rule 28 (equals_list)


State 87

   20 condition: condition • AND condition
   20          | condition AND condition •

    AND  shift, and go to state 68

    AND       [reduce using rule 20 (condition)]
    $default  reduce using rule 20 (condition)


State 88

   25 equals_list: attribute •
   28            | attribute • dot attribute

    dot  shift, and go to state 67

    $default  reduce using rule 25 (equals_list)


State 89

   23 condition: equals_list equals_sign equals_list •

    $default  reduce using rule 23 (condition)


State 90

   34 column_value_list: attribute equals_sign number comma • column_value_list

    attribute  shift, and go to state 34

    column_value_list  go to state 101


State 91

   32 column_value_list: attribute equals_sign pattren comma • column_value_list

    attribute  shift, and go to state 34

    column_value_list  go to state 102


State 92

   42 insert_values_list: number comma • insert_values_list

    number   shift, and go to state 73
    pattren  shift, and go to state 74

    insert_values_list  go to state 103


State 93

   41 insert_values_list: pattren comma • insert_values_list

    number   shift, and go to state 73
    pattren  shift, and go to state 74

    insert_values_list  go to state 104


State 94

   36 insert_values: open_parenthesis insert_values_list close_parenthesis •

    $default  reduce using rule 36 (insert_values)


State 95

   38 insert_columns_list: attribute comma insert_columns_list •

    $default  reduce using rule 38 (insert_columns_list)


State 96

   44 create_list: attribute DATATYPE comma • create_list

    attribute  shift, and go to state 58

    create_list  go to state 105


State 97

   47 alter_option: MODIFY COLUMN attribute DATATYPE •

    $default  reduce using rule 47 (alter_option)


State 98

   29 pattren_list: pattren •
   30             | pattren • comma pattren_list

    comma  shift, and go to state 106

    $default  reduce using rule 29 (pattren_list)


State 99

   21 condition: attribute IN open_parenthesis queries • close_parenthesis

    close_parenthesis  shift, and go to state 107


State 100

   22 condition: attribute IN open_parenthesis pattren_list • close_parenthesis

    close_parenthesis  shift, and go to state 108


State 101

   34 column_value_list: attribute equals_sign number comma column_value_list •

    $default  reduce using rule 34 (column_value_list)


State 102

   32 column_value_list: attribute equals_sign pattren comma column_value_list •

    $default  reduce using rule 32 (column_value_list)


State 103

   42 insert_values_list: number comma insert_values_list •

    $default  reduce using rule 42 (insert_values_list)


State 104

   41 insert_values_list: pattren comma insert_values_list •

    $default  reduce using rule 41 (insert_values_list)


State 105

   44 create_list: attribute DATATYPE comma create_list •

    $default  reduce using rule 44 (create_list)


State 106

   30 pattren_list: pattren comma • pattren_list

    pattren  shift, and go to state 98

    pattren_list  go to state 109


State 107

   21 condition: attribute IN open_parenthesis queries close_parenthesis •

    $default  reduce using rule 21 (condition)


State 108

   22 condition: attribute IN open_parenthesis pattren_list close_parenthesis •

    $default  reduce using rule 22 (condition)


State 109

   30 pattren_list: pattren comma pattren_list •

    $default  reduce using rule 30 (pattren_list)
